tests/sksl/errors/UnscopedVariableInDoWhile.glsl
### Compilation failed:

error: 3: variable 'foo' must be created in a scope
        int foo = 1, bar = foo;
        ^^^^^^^^^^^
1 error
